# jmal-cloud-server

./: .env-example  .gitgnore  .gitignore  Dockerfile  Dockerfile.native  README.md  docker-compose.base-aliyun-beijing.yml  docker-compose.base-aliyun-guangzhou.yml  docker-compose.base.proxy.yml  docker-compose.base.yml  docker-compose.example.yml  docker-compose.example2.yml  docker-compose.yml  docker-entrypoint.sh  gen-reachability-metadata.sh  install.sh  jc.sh  nginx.conf  pom.xml  push.sh  release-www.sh  start.sh  update.sh  upload.sh
.github/: release-drafter.yml
.github/workflows/: build-nvidia.yml  build-twice-serial.yml  build.yml  build_jdk17_ffmpeg_nvidia.yml  build_jdk_ffmpeg.yml  build_jmalcloud_base.yml  build_jmalcloud_mid.yml  jmalcloud-cli-release.yml  merge-manifests.yml  nightly-build.yml  nightly-nvidia-build.yml  pushAliyun.yml  pushTencent.yml  release-drafter.yml  release.yml  release_aliyun.yml  test-build.yml  test-native-build.yml  test-nvidia-build.yml  test.yml
cli/jmal-cloud-cli/: Cargo.toml  install.sh
cli/jmal-cloud-cli/src/: api.rs  auth.rs  config.rs  errors.rs  identifier.rs  lib.rs  main.rs  models.rs  paths.rs  upload.rs
cli/jmal-cloud-cli/tests/: install.sh  release-workflow.sh
docker/: Dockerfile  Dockerfile_mid  README.md  nginx.conf  push.sh
docker/jmalcloud-nvidia/: Dockerfile
docker/mongo/: Dockerfile  README.md  docker-entrypoint.sh
docker/nginx/: Dockerfile  README.md  default.conf  mod_zip.tar  nginx.conf
docker/nvidia/: Dockerfile
docs/: stun-channel.md
src/main/resources/: application-dev.yml  file.yml  (+13 more)
(+1260 files in other folders)
